--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
 Flask==0.10.1
+Flask-Bcrypt==0.5.2
+Flask-Mail==0.9.0
 Flask-Migrate==1.2.0
 Flask-SQLAlchemy==1.0
 Flask-Script==0.6.7
+Flask-SeaSurf==0.1.22
 Jinja2==2.7.2
 Mako==0.9.1
 MarkupSafe==0.19
 SQLAlchemy==0.9.3
 Werkzeug==0.9.4
 alembic==0.6.3
+blinker==1.3
+ecdsa==0.11
 itsdangerous==0.23
+paramiko==1.13.0
 psycopg2==2.5.2
+py-bcrypt==0.4
+pycrypto==2.6.1
 wsgiref==0.1.2
